Add small Anis logo to header, align left

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                         <i class="fab fa-js-square"></i> JavaScript
                     </button>
                 </div>
-
+             <div class="logo">
+    <img src="Logo Anis.jpg" alt="Anis Logo" class="app-logo">
+    <h1>Web App Maker</h1>
+</div>
                 <div class="editor-container">
                     <div class="code-editor active" id="html-editor">
                         <div class="editor-header">
